# 1Year-2Semester-cpp

./: .gitignore  README.md
lab0(qt introduction)/: CMakeLists.txt  main.cpp  mainwindow.ui
lab1(basics of classes)/: CmakeLists.txt  main  main.cpp
lab2(implementation of the MyString class)/: CmakeLists.txt  MyString.cpp  MyString.h  main  main.cpp
lab3(qt logger)/: CMakeLists.txt  main.cpp
lab4(authorization form on QT)/: AuthorizationForm.cpp  AuthorizationForm.hpp  CmakeLists.txt  Database.hpp  Logger.hpp  PasswordEncryption.hpp  README.md  User.hpp  main.cpp
